[tool.poetry]
name = "promlab"
version = "0.1.0"
description = ""
authors = ["Victor Martinez <vcrmartinez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
pydantic = "^2.4.2"
uvicorn = "^0.23.2"
prometheus-client = "^0.17.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
